# sdlnet-tictactoe

./: CMakeLists.txt  client.c  net.c  net.h  server.c  serverutils.c  serverutils.h  tictactoe.c  tictactoe.h  util.c  util.h
macos/: tictactoe_icon.icns
